Closed Bug 857091 Opened 11 years ago Closed 11 years ago

[jsdbg2] Assertion failure: !cx->isExceptionPending(), at ../jscntxtinlines.h:341

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: decoder, Assigned: jimb)

Details

(Keywords: assertion, testcase, Whiteboard: [jsbugmon:update])

Attachments

(2 files)

The following testcase asserts on mozilla-central revision aae004a3c5d9 (run with --ion-eager):


eval("(function() { " + "\
var otherGlobalSameCompartment = newGlobal('same-compartment');\
eval = otherGlobalSameCompartment.eval;\
" + " })();");
eval("(function() { " + "\
var dbg = new Debugger;\
assertEq(dbg.addAllGlobalsAsDebuggees(), undefined);\
" + " })();");
Whiteboard: [jsbugmon:update,bisect]
Whiteboard: [jsbugmon:update,bisect] → [jsbugmon:update]
JSBugMon: Bisection requested, result:
autoBisect shows this is probably related to the following changeset:

The first bad revision is:
changeset:   117593:2fce7807dc84
user:        Panos Astithas
date:        Fri Jan 04 21:34:43 2013 +0200
summary:     Implement a new addAllGlobalsAsDebuggees method for faster chrome debugging (bug 821701); r=jimb

This iteration took 142.171 seconds to run.
This also crashes for me, with no shell flags passed at all:
newGlobal('same-compartment')
.eval("assertEq((new Debugger).addAllGlobalsAsDebuggees(), undefined);");
Or, of course:
newGlobal().eval("assertEq((new Debugger).addAllGlobalsAsDebuggees(), undefined);");
Or even:
newGlobal().eval("(new Debugger).addAllGlobalsAsDebuggees();");
Original code was r=me...
Assignee: general → jimb
Status: NEW → ASSIGNED
Ugh, sorry about that!
Failures on try are because the test requires an exception to be thrown --- but some tests run everything in debug mode, so there's no problem adding debuggees with live frames on the stack.
Comment on attachment 740508 [details] [diff] [review]
Debugger: Don't ignore errors returned by dbg->addDebuggeeGlobal in addAllGlobalsAsDebuggees.

All try failures are starred, or the test suite was re-run and resolved. Requesting review.
Attachment #740508 - Flags: review?(jorendorff)
Attachment #740508 - Flags: review?(jorendorff) → review+
Revised test to pass when the shell has put everything in debug mode, and thus the test case does not throw. Carrying over r=jorendorff.
https://hg.mozilla.org/integration/mozilla-inbound/rev/97663ef54fef
Flags: in-testsuite+
OS: Linux → All
Hardware: x86_64 → All
Target Milestone: --- → mozilla24
https://hg.mozilla.org/mozilla-central/rev/97663ef54fef
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: