Bug 857091: Debugger: Don't ignore errors returned by dbg->addDebuggeeGlobal in addAllGlobalsAsDebuggees. r=jorendorff